# model-evaluation

./: .gitignore  README.md  lst20.ipynb  pyproject.toml
scripts/hellaswag/: hellaswag.yaml  utils.py
scripts/legacy/: rte.yaml
scripts/legacy/lst20/: lst20.py
scripts/legacy/thaisum/: thaisum.py
scripts/lm-eval/hellaswag_th/: utils.py
scripts/lm-eval/multirc_th/: multirc_th.yaml
scripts/lm-eval/record_th/: util.py
scripts/lm-eval/rte_th/: rte_th.yaml  util.py
scripts/lm-eval/wisesight_sentiment/: util.py
scripts/lst20/: lst20.py  prompt.py  token_mapping.txt
scripts/record/: record.yaml
scripts/thai-exam/exams/: 04_investment_consult.csv  05_facebook_beleble_th_200.csv  06_xcopa_th_200.csv  08_onet_m3_thai.csv  09_onet_m3_social.csv  10_onet_m3_math.csv  12_onet_m3_english.csv  13_onet_m6_thai.csv  16_onet_m6_science.csv
scripts/thai-exam/short_exams/: 04_investment_consult.csv
scripts/thaisum/: bleu_result.json  prompt.py  rouge_result.json  thaisum.py
scripts/wisesight_sentiment/: wisesight_sentiment.yaml
scripts/xquad_th/: task.py  xquad_th.yaml
src/model_evaluation/models/: __int__.py  claude.py  gemini.py  openai.py  openthaigpt_hf_13b_2023.py  openthaigpt_hf_2024.py  sailor.py  (+6 more)
thai-exam/: evaluate.py  prompt.py
thai-exam/exams/: 07_xnli2.0_th_200.csv  11_onet_m3_science.csv  14_onet_m6_math.csv  15_onet_m6_social.csv  17_onet_m6_english.csv  a_level.csv  tgat.csv  tpat1.csv
thai-exam/models/: gemini.py  openai.py  openthaigpt_hf_13b_2023.py  openthaigpt_hf_7b_2023.py
thai-exam/short_exams/: 05_facebook_beleble_th_200.csv
